--- a/football/app/src/main/res/layout/detail_fragment.xml
+++ b/football/app/src/main/res/layout/detail_fragment.xml
@@ -43,7 +43,7 @@
             android:paddingLeft="120dp"
             android:paddingRight="120dp"
             android:paddingStart="120dp"
-            app:paddingEnd="120dp"
+            android:paddingEnd="120dp"
             />
     </FrameLayout>
 
