--- a/football/app/src/main/res/layout/fragment_main.xml
+++ b/football/app/src/main/res/layout/fragment_main.xml
@@ -1,9 +1,14 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:layout_height="match_parent"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingStart="16dp"
     android:layout_marginLeft="@dimen/list_horizonal_matgin"
     android:layout_marginRight="@dimen/list_horizonal_matgin"
+    android:layout_marginStart="2dp"
+    android:layout_marginEnd="2dp"
     android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingEnd="16dp"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MainActivity$PlaceholderFragment">
